tests/baselines/reference/es6ImportEqualsExportModuleCommonJsError.errors.txt
tests/cases/compiler/main.ts(1,20): error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.


==== tests/cases/compiler/a.ts (0 errors) ====
    class a { }
    export = a;
    
==== tests/cases/compiler/main.ts (1 errors) ====
    import * as a from "./a";
                       ~~~~~
!!! error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
    a;
    
    
    